--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Thom Portfolio</title>
+    <title>About Thom Wise</title>
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
         </div>
         <nav class="nav">
             <ul class="menu-nav">
-                <li class="menu-nav__item active">
+                <li class="menu-nav__item">
                     <a href="index.html" class="menu-nav__link">
                         Home
                     </a>
@@ -24,7 +24,7 @@
                         About Me
                     </a>
                 </li>
-                <li class="menu-nav__item">
+                <li class="menu-nav__item active">
                     <a href="index.html" class="menu-nav__link">
                         My Projects
                     </a>
@@ -39,11 +39,24 @@
     </header>
 
     <main>
-        <section class="home">
-            <h2>Hi! My name is </h2>
-            <h1 class="home__name">Thom <span class="home__name--last">Wise</span>
-            </h1>
-            <h2>Web Developer, Designer & Programmer</h2>
+        <section class="projects">
+            <div class="projects__bio-image">
+                <h1 class="text-secondary">My Projects</h1>
+            </div>
+
+            <div class="projects__items">
+                <div class="projects__item">
+                    <img src="img/bike_page.jpg" alt="Bicycle Touring Website Screenshot">
+                    <div class="projects__btns">
+                        <a href="#" class="projects__btn">
+                            <i class="fas fa-eye"></i> Preview
+                        </a>
+                        <a href="#" class="projects__btn">
+                            <i class="fab fa-github"></i> Github
+                        </a>
+                    </div>
+                </div>
+            </div>
 
             <div class="social-icons">
                 <a href="#!">
