--- a/about.html
+++ b/about.html
@@ -20,17 +20,17 @@
                     </a>
                 </li>
                 <li class="menu-nav__item active">
-                    <a href="index.html" class="menu-nav__link">
+                    <a href="about.html" class="menu-nav__link">
                         About Me
                     </a>
                 </li>
                 <li class="menu-nav__item">
-                    <a href="index.html" class="menu-nav__link">
+                    <a href="projects.html" class="menu-nav__link">
                         My Projects
                     </a>
                 </li>
                 <li class="menu-nav__item">
-                    <a href="index.html" class="menu-nav__link">
+                    <a href="contact.html" class="menu-nav__link">
                         Contact Me
                     </a>
                 </li>
