--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Thom Portfolio</title>
+    <title>Contact Thom Wise</title>
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
         </div>
         <nav class="nav">
             <ul class="menu-nav">
-                <li class="menu-nav__item active">
+                <li class="menu-nav__item">
                     <a href="index.html" class="menu-nav__link">
                         Home
                     </a>
@@ -24,7 +24,7 @@
                         About Me
                     </a>
                 </li>
-                <li class="menu-nav__item">
+                <li class="menu-nav__item active">
                     <a href="projects.html" class="menu-nav__link">
                         My Projects
                     </a>
@@ -39,11 +39,23 @@
     </header>
 
     <main>
-        <section class="home">
-            <h2>Hi! My name is </h2>
-            <h1 class="home__name">Thom <span class="home__name--last">Wise</span>
-            </h1>
-            <h2>Web Developer, Designer & Programmer</h2>
+        <section class="contact">
+            <h2>Contact Me..</h2>
+
+            <div class="contact__list">
+                <div class="contact__email">
+                    <i class="fas fa-envelope"></i> Email
+                    <div class="text-secondary">email@email.com</div>
+                </div>
+                <div class="contact__phone">
+                    <i class="fas fa-mobile-alt"></i> Phone
+                    <div class="text-secondary">1 (555) 555-5555</div>
+                </div>
+                <div class="contact__address">
+                    <i class="fas fa-address-card"></i> Address
+                    <div class="text-secondary">123 Fake St. Fresno, CA</div>
+                </div>
+            </div>
 
             <div class="social-icons">
                 <a href="#!">
