--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <img src="/dist/img/logo.png" alt="" class="logo">
         <div class="menu-btn">
             <span class="menu-btn__burger"></span>
         </div>
@@ -43,7 +44,9 @@
             <h2>Hi! My name is </h2>
             <h1 class="home__name">Thom <span class="home__name--last">Wise</span>
             </h1>
-            <h2>Web Developer, Designer & Programmer</h2>
+
+            <h2>Web Developer,</h2>
+            <h2>Designer & Programmer</h2>
 
             <div class="social-icons">
                 <a href="#!">
