--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <img src="/dist/img/logo.png" alt="" class="logo">
         <div class="menu-btn">
             <span class="menu-btn__burger"></span>
         </div>
